<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"


    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"

        android:layout_width="match_parent"
        android:layout_height="67dp"
        android:background="@color/background"
        >

        <ImageButton
            android:id="@+id/imageButton3"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:background="@color/background"
            app:srcCompat="@drawable/outline_arrow_back_black_24dp"
            android:contentDescription="@string/back" />

    </com.google.android.material.appbar.AppBarLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        app:layout_anchorGravity="center"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/textView"
            android:layout_width="283dp"
            android:layout_height="51dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/textView_1"
            android:textAlignment="center"
            android:textColor="@color/montserrat_bold"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.57"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.105" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/textView_2"
            android:textAlignment="center"
            android:textColor="@color/montserrat_medium"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.183" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="214dp"
            android:layout_height="30dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/textView_3"
            android:textColor="@color/montserrat_bold"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.723"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.315" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="269dp"
            android:layout_height="56dp"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/textView_4"
            android:textColor="@color/montserrat_medium"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.371" />

        <TextView
            android:id="@+id/yourName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/yourName"
            android:textColor="@color/montserrat_medium"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.046"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.465" />

        <TextView
            android:id="@+id/yourEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/yourEmail"
            android:textColor="@color/montserrat_medium"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/yourName"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/yourName"
            app:layout_constraintTop_toBottomOf="@+id/yourName" />

        <TextView
            android:id="@+id/password"
            android:layout_width="70dp"
            android:layout_height="19dp"
            android:layout_marginTop="60dp"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/password"
            android:textColor="@color/montserrat_medium"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/yourEmail"
            app:layout_constraintHorizontal_bias="0.333"
            app:layout_constraintStart_toStartOf="@+id/yourEmail"
            app:layout_constraintTop_toBottomOf="@+id/yourEmail" />

        <TextView
            android:id="@+id/confirmPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/confirmPassword"
            android:textColor="@color/montserrat_medium"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/password"
            app:layout_constraintHorizontal_bias="0.083"
            app:layout_constraintStart_toStartOf="@+id/password"
            app:layout_constraintTop_toBottomOf="@+id/password" />

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="370dp"
            android:layout_height="40dp"
            android:layout_marginTop="7dp"
            android:layout_marginBottom="7dp"
            android:autofillHints=""
            android:background="@color/input_background"
            android:ems="10"
            android:hint="@string/yourNameInput"
            android:inputType="textPersonName"
            android:textColor="@color/montserrat_medium"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/yourEmail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/yourName" />

        <EditText
            android:id="@+id/editTextTextPersonName3"
            android:layout_width="370dp"
            android:layout_height="40dp"
            android:layout_marginTop="7dp"
            android:layout_marginBottom="7dp"
            android:autofillHints=""
            android:background="@color/input_background"
            android:ems="10"
            android:hint="@string/yourEmailInput"
            android:inputType="textEmailAddress"
            android:textColor="@color/montserrat_medium"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/yourEmail" />

        <EditText
            android:id="@+id/editTextTextPassword2"
            android:layout_width="370dp"
            android:layout_height="40dp"
            android:layout_marginTop="7dp"
            android:layout_marginBottom="7dp"
            android:autofillHints=""
            android:background="@color/input_background"
            android:ems="10"
            android:hint="@string/passwordInput"
            android:inputType="textPassword"
            android:textColor="@color/montserrat_medium"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/confirmPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password" />

        <EditText
            android:id="@+id/editTextTextPassword3"
            android:layout_width="370dp"
            android:layout_height="40dp"
            android:layout_marginTop="7dp"
            android:autofillHints=""
            android:background="@color/input_background"
            android:ems="10"
            android:hint="@string/passwordInput"
            android:inputType="textPassword"
            android:textColor="@color/montserrat_medium"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.512"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/confirmPassword"
            app:layout_constraintVertical_bias="0.048" />

        <Button
            android:id="@+id/button2"
            android:layout_width="384dp"
            android:layout_height="53dp"
            android:layout_marginTop="38dp"
            android:layout_marginBottom="12dp"
            android:backgroundTint="@color/green"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/continueButton"
            android:textColor="@color/continueButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword3"
            app:layout_constraintVertical_bias="0.0" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img"
            android:layout_width="109dp"
            android:layout_height="110dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="72dp"
            android:layout_marginEnd="16dp"
            android:src="@color/input_background"
            app:civ_border_color="@color/green"
            app:civ_border_width="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="76dp"
            android:layout_height="74dp"
            android:background="@color/input_background"
            android:contentDescription="@string/camera"
            android:onClick="onCameraClick"
            app:layout_constraintBottom_toBottomOf="@+id/img"
            app:layout_constraintEnd_toEndOf="@+id/img"
            app:layout_constraintStart_toStartOf="@+id/img"
            app:layout_constraintTop_toTopOf="@+id/img"
            app:srcCompat="@drawable/outline_photo_camera_black_24dp" />

        <RadioGroup
            android:layout_width="378dp"
            android:layout_height="47dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="@+id/button2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.454"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword3"
            app:layout_constraintVertical_bias="0.0">

            <RadioButton
                android:id="@+id/radioButton6"
                android:layout_width="84dp"
                android:layout_height="38dp"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/radioButtonMale"
                android:textColor="@color/montserrat_medium"
                android:textSize="16sp"
                android:buttonTint="@color/green"/>

            <RadioButton
                android:id="@+id/radioButton7"
                android:layout_width="94dp"
                android:layout_height="31dp"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/radioButtonFemale"
                android:textColor="@color/montserrat_medium"
                android:textSize="16sp"
                android:buttonTint="@color/green"/>
        </RadioGroup>


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>